--- a/views/projectDetails.html
+++ b/views/projectDetails.html
@@ -148,7 +148,7 @@
                 <div style = "padding-bottom:30px">
                 <a style="display:none" id="done"></a>
                 <label> currentBids </label>
-                <table id="bidsTable" border="1"><tr> <td>name</td> <td> value </td> </table>
+                <table id="bidsTable" border="1"><tr> <td><b>Name</b></td> <td><b> Value</b> </td> </table>
 
                 <p id="error"></p>
                 </tr>
