--- a/views/index.html
+++ b/views/index.html
@@ -7,10 +7,9 @@
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yodel</title>
-    <meta name="description" content="Ethanol is an Agency and Personal Portfolio Template built with bootstrap 3.3.2. This is created for a cause to support my uncle's campaign. Go and Donate at - https://life.indiegogo.com/fundraisers/medical-support-for-a-filipino-overseas-worker--3/x/10058181">
-    <meta name="keywords" content="portfolio, agency, bootstrap theme, mobile responsive, template, personal">
-    <meta name="author" content="ThemeForces.Com">
-    
+    <meta name="description" content="Yodel stuff">
+    <meta name="keywords" content="Freelance">
+
     <!-- Favicons
     ================================================== -->
     <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> -->
@@ -18,23 +17,10 @@
     <!-- <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png"> -->
     <!-- <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png"> -->
 
-    <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css"  href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../fonts/font-awesome/css/font-awesome.css">
-
-
-    <!-- Slider
-    ================================================== -->
-
-
-    <!-- Stylesheet
-    ================================================== -->
     <link rel="stylesheet" type="text/css"  href="../css/style.css">
-
-    <!-- Google Fonts
-    ================================================== -->
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
@@ -48,13 +34,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Yodel</a>
+				<div class="navbar-brand" href="#">Yodel</div>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#tf-home" class="scroll">Home</a></li>
                     <li><a href="/register" class="scroll">Register</a></li>
 					<li><a href="/login" class="scroll">Login</a></li>
 				</ul>
@@ -84,51 +69,101 @@
     		</div><!-- end container -->
     	</div>
     </div>
+	<div id="feature" class="gray-bg">
+		<div class="container">
+			<div>
+				<center>
+					<h2><b>Cheap, Fast, Simple</b></h2>
+				</center>
+			</div>
+			<center>
+			<hr>
+			<div class="row">
+				<div class="col-md-4">
+				<h2>1. Set your price</h2>
+				</div>
+				<div class="col-md-4">
+				<h2> 2. Choose your bidder</h2>
+				</div>
+				<div class="col-md-4">
+				<h2> 3. Celebrate!</h2>
+				</div>
+			</div>
+			</center>
+		</div>
+	</div>
 
-    <!-- Why Us/Features Section
-    ================================================== -->
-    <div id="tf-features">
-    	<div id="feature" class="gray-bg"> <!-- fullwidth gray background -->
-    		<div class="container"> <!-- container -->
-    			<div>
-    				<center>
-    					<h2>Cheap, Fast, Simple</h2>
-    				</center>
-    			</div>
-    			<center>
-    			<hr>
-    			<div class="row">
-    				<div class="col-md-4">
-    				<h2>1. Set your price</h2>
-    				</div>
-    				<div class="col-md-4">
-    				<h2> 2. Choose your bidder</h2>
-    				</div>
-    				<div class="col-md-4">
-    				<h2> 3. Celebrate!</h2>
-    				</div>
-    			</div>
-    			</center>
-    		</div> <!-- end container -->
-    	</div><!-- end fullwidth gray background -->
+    <div id="tf-process">
+      <div class="overlay">
+        <div class="container"><!-- container -->
+            <div id="process" class="row"> <!-- row -->
+
+                <div class="col-md-10 col-md-offset-1">
+
+                    <div class="media process"> <!-- Process #1 -->
+                        <div class="media-right media-middle">
+                            <i class="fa fa-home"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Create your own idea</h4>
+                            <p>Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
+                        </div>
+                    </div><!-- Process #1 -->
+
+                    <div class="media process"> <!-- Process #2 -->
+                        <div class="media-right media-middle">
+                            <i class="fa fa-wrench"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Polish your idea and design</h4>
+                            <p>Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
+                        </div>
+                    </div><!-- Process #2 -->
+
+                    <div class="media process"> <!-- Process #3 -->
+                        <div class="media-right media-middle">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Hire someone on Yodel to do it</h4>
+                            <p>Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
+                        </div>
+                    </div><!-- Process #3 -->
+
+                    <div class="media process"> <!-- Process #4 -->
+                        <div class="media-right media-middle">
+                            <i class="fa fa-plane"></i>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Launch</h4>
+                            <p>Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
+
+                        </div>
+                    </div><!-- Process #4 -->
+
+                </div>
+
+            </div> <!-- end row -->
+        </div><!-- end container -->
+      </div>
     </div>
 
-    <div id="tf-works">
+    <div id="tf-register">
     	<div class="container">
     		<div class="section-header">
-    			<A href="/register"><h2>Sign up today!</span></h2></A>
+    			<a href="/register"><h2>Sign up today!</span></h2></a>
     		</div>
-    	</div><!-- End Container -->
+    	</div>
     </div>
 
     <div id="tf-footer">
     	<div class="container"><!-- container -->
-    		<p class="pull-left">© 2015 ethanol. All rights reserved.</p> <!-- copyright text here-->
+    		<p class="pull-left">© 2015 Yodel. All rights reserved.</p> <!-- copyright text here-->
     		<ul class="list-inline social pull-right">
     		</ul>
     	</div><!-- end container -->
     </div>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </body>
 </html>
