--- a/views/login.html
+++ b/views/login.html
@@ -27,7 +27,7 @@
 
     <center>
 <!--         <h1 class="register-title" style = "margin-top: 20px">Login</h1> -->
-            <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642; padding-top:25px; height: 70px;">
+            <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#307EC8; padding-top:25px; height: 70px;">
               <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important;">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
         
