--- a/views/register.html
+++ b/views/register.html
@@ -26,7 +26,7 @@
 <body style="overflow-x: hidden; overflow-y: hidden;background-color: #d5dce8"><!--overflow-x: hidden; overflow-y: hidden;-->
     <center>
 <!--         <h1 class="register-title" style = "margin-top: 20px">Login</h1> -->
-            <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642; padding-top:25px; height: 70px;">
+            <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#307EC8; padding-top:25px; height: 70px;">
               <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important;">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
         
@@ -48,8 +48,8 @@
         <table style="width:402px" id="tableID">
             <tbody>
                 <tr style = "text-align: center; font-size:15px">
-                    <td style = "background-color:#e3e5e8; border:1px solid #b8c3d6;" onclick="location.href='/login'">SIGN UP</td>
-                    <td class = "selected" style = "background-color:#FFFFFF;padding-bottom:20px; padding-top:20px">SIGN IN</td>
+                    <td style = "background-color:#e3e5e8; border:1px solid #b8c3d6;" onclick="location.href='/login'">SIGN IN</td>
+                    <td class = "selected" style = "background-color:#FFFFFF;padding-bottom:20px; padding-top:20px">SIGN UP</td>
                <!--      <td>  -->
 
                 </tr>
