--- a/views/profile.html
+++ b/views/profile.html
@@ -6,84 +6,137 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Profile</title>
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
-	<link rel="stylesheet" type="text/css"  href="../css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" type="text/css"  href="../css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	</head>
+	<link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/docs.min.css" rel="stylesheet">
+
+    <script src="js/jquery.min.js"></script>
+
+
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+
+    <!-- Bootstrap -->
+    <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- bootstrap-progressbar -->
+    <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
+
+    <link href="../build/css/custom.min.css" rel="stylesheet">
+
+</head>
 
 <body>
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-
-			</div>
-
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-          <li><a href="/register" class="scroll">Register</a></li>
-					<li><a href="/login" class="scroll">Profile</a></li>
-				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
+  <body class="nav-md">
+    <div class="container body">
+      <div class="main_container">
+        <div class="col-md-3 left_col">
+          <div class="left_col scroll-view">
 
 
-	<div id="tf-home">
-		<div class="overlay">
-			<div class="container">
-				<button><a href="/createProject"> New Project</a></button>
-				<form class="search">
-					<input type="text" class="register-input" id="searchProject" placeholder="search">
-					<select id="searchType">
-						<option value="name">Name</option>
-						<option value="category" selected>Category</option>
-						<option value="location">Location</option>
-					</select>
-					<p id="error"></p>
-					<button type="button" onclick="searchProjects()" value="search" class="register-button">search</button>
-					<option></option>
-				</form>
-			</div>
-			<div class="container">
-				<label> Projects </label><br>
+ 
+            <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642;">
+              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
+      <!--         <hr> -->
+        
+            </div>
 
-			</div>
-			<table id="projectsTable" border="1">
-			</table>
-			<div class="row" >
-				<div class="col-lg-4" style="text-align: right">
-		<!-- 		            		<p style = "font-size:24px; margin-bottom:0px;">Result</p>
-				            		<p style = "margin-left:20px; font-size:18px">Click to select</p> -->
-				</div>
-				<div class="col-lg-8" style="">
-		 			<table id="resultsTable" style="border: 0px solid black; font-size:18px; width:400px">
-					</table>
+            <div class="clearfix" style="background-color:#142642"><!-- </br> &nbsp; --></div>
+     <!--        <hr> -->
+            <!-- menu profile quick info -->
+            <!-- /menu profile quick info -->
 
-					<br><br>
-				</div>
-			</div>
-		</div>
-	</div>
+             <!-- sidebar menu -->
+            <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+              <div class="menu_section" style = "font-size:16px">
+                <ul class="nav side-menu">
+                  <li><a href="/profile">Profile</a></li>
+                  <li><a href="/myprojects">My Projects</a></li>
+                  <li><a href="/pending">Pending Bids</a></li>
+                  <li><a href="/accepted">Accepted Bids</a></li>
+                  <li><a href="/completed">Completed</a></li>
+                  <li><a href="/" style = "">Logout</a></li>
+                </ul>
+              </div>
 
-	<br><br>
+            </div>
+            <!-- /sidebar menu -->
 
-	<style type="text/css">
-  .tableag > th, td {
-    padding:15px;
-  }
-	table{
+            <!-- /menu footer buttons -->
+            <!-- /menu footer buttons -->
+          </div>
+        </div>
+
+        <!-- top navigation -->
+        <div class="top_nav">
+          <div class="nav_menu" style = "height:57px">
+  <!--           <nav> -->
+                <a id="menu_toggle"><i class="fa fa-bars fa_custom fa-2x" style = "padding:15px"></i></a>
+                <ul class="nav navbar-nav navbar-right">
+                <li class="">
+                  <a href = "/profile" class="user-profile dropdown-toggle" style = "height:57px">
+                   <!--  <img src="images/img.jpg" alt=""> --><label id="username" style = "text-align: center !important; margin-right:20px;"></label>
+                  </a>
+                <br>
+          </div>
+
+        </div>
+
+
+        <div class="right_col" role="main">
+
+        	<div class="">
+			<!-- 	<center> -->
+					<div class = "row" style="margin-left: 2px">
+<!-- 						<form class="search">
+							<input type="text" class="register-input" id="searchProject" placeholder="Search">
+							<select id="searchType">
+								<option value="name">Name</option>
+								<option value="category" selected>Category</option>
+								<option value="location">Location</option>
+							</select>
+							<p id="error"></p>
+							<button type="button" onclick="searchProjects()" value="search" class="register-button">Search</button>
+							<option></option>
+						</form>
+
+ -->
+
+
+<!-- 
+ 							<label id="username" style = "text-align: center !important"></label></br>
+							<label> My Projects</label><br>
+							<table id="yourTable" border="1"></table>
+							<br><br> -->
+
+						
+							<button><a href="/createProject"> New Project</a></button>
+							<br><br>
+
+							<form class="search">
+								<input type="text" class="register-input" id="searchProject" placeholder="search">
+								<select id="searchType">
+									<option value="name">Name</option>
+									<option value="category" selected>Category</option>
+									<option value="location">Location</option>
+								</select>
+								<p id="error"></p>
+								<button type="button" onclick="searchProjects()" value="search" class="register-button">search</button>
+								<option></option>
+							</form>
+
+					</div>
+												 <label> Projects </label><br>
+												   <style type="text/css">
+    .tableag > th, td {
+      padding:15px;
+    }
+    	table{
 		border-collapse: collapse;
 		width:100%;
 		table-layout: fixed;
@@ -100,7 +153,28 @@
 		width:100%;
 	}
   </style>
+							  <table id="projectsTable" border="1">
+							  </table>
+					<div class="row" >
+			            <div class="col-lg-4" style="text-align: right">
+<!-- 		            		<p style = "font-size:24px; margin-bottom:0px;">Result</p>
+		            		<p style = "margin-left:20px; font-size:18px">Click to select</p> -->
+			            </div>
+			            <div class="col-lg-8" style="">
+<!-- 							<table id="resultsTable" style="border: 0px solid black; font-size:18px; width:400px">
+							</table> -->
 
+							<br><br>
+						</div>
+					</div>
+			<!-- 	</center> -->
+		    	</div>
+		    </div>
+      </div>
+    </div>
+
+
+	<br><br>
     <!-- jQuery -->
     <script src="../vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
@@ -334,7 +408,7 @@
 						}
 					});
 				});
-			}
+			} 
 			else {
 				window.location = document.getElementById("notLoggedIn").href
 			}
@@ -395,7 +469,7 @@ query.once("value")
 
         	while(table.rows.length > 0) {
         		table.deleteRow(0);
-        	}
+        	}   
 
         	var query = firebase.database().ref("projects").orderByKey();
         	query.once("value")
