--- a/views/register.html
+++ b/views/register.html
@@ -14,6 +14,8 @@
     <link href="../main.css" rel="stylesheet">
   
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
 
 
 
