--- a/views/payment.html
+++ b/views/payment.html
@@ -6,27 +6,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Profile</title>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/docs.min.css" rel="stylesheet">
-    <script src="js/jquery.min.js"></script>
 
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/121761/card.js"></script>
+    <!-- <script src="../js/jquery.min.js"></script> -->
 
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 
     <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
     <!-- bootstrap-progressbar -->
-    <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
+    <!-- <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet"> -->
 
     <link href="../build/css/custom.min.css" rel="stylesheet">
+    <link href="../css/payment.css" rel="stylesheet">
 
 </head>
 
@@ -55,13 +55,10 @@
 
 <body>
 <body class="nav-md">
-    <div class="container body">
-      <div class="main_container">
+    <div class="container body" style="z-index:1">
+      <div class="main_container" style="z-index:1">
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
-
-
-
             <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642;">
               <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
@@ -90,8 +87,6 @@
                   <li><a href="/accepted">Accepted Bids</a></li>
                   <li><a href="/completed">Completed</a></li>
                   <li><a href="/" style = "">Logout</a></li>
-
-                  <li><a href="/projectDetails">asdf</a></li>
                 </ul>
               </div>
 
@@ -122,36 +117,24 @@
         </div>
 
 
-        <div class="right_col" role="main">
-
+        <div class="right_col" role="main" style="height:100%">
             <div class="">
+              <form>
+                 <div class="form-container">
+                   <div class="personal-information">
+                     <h1>Payment Information</h1>
+                   </div>
 
-                <a href="/profile"> <button> back </button> </a>
-                <header>
-                    <h1>{{ user }} </h1>
-                    <h3 style="color:gray">{{ category }} </h3>
-                    <p style="color:gray"> {{ location }} </p>
-                    <hr>
-                </header>
-                <h4> {{ service }} </h4>
-                <p>{{ description }}</p>
-                <p> Ends at {{ deadline }}</p>
+                   <input id="input-field" type="text" name="streetaddress" required="required" autocomplete="on" maxlength="45" placeholder="Street Address"/>
+                   <input id="column-left" type="text" name="city" required="required" autocomplete="on" maxlength="20" placeholder="City"/>
+                   <input id="column-right" type="text" name="zipcode" required="required" autocomplete="on" pattern="[0-9]*" maxlength="5" placeholder="ZIP code"/>
+                   <input id="input-field" type="email" name="email" required="required" autocomplete="on" maxlength="40" placeholder="Email"/>
+                  <input id="input-button" type="submit" onclick="pay()" value="Submit"/>
+               </form>
 
-                <form>
-                    <label> Bid? </label><br>
-                    <input type="text" class="register-input" id="newBid"> <br><br>
-                    <label> Comments </label><br>
-                    <textarea id="comments" rows="4" cols="50"></textarea><br>
-                    <button id="submitBidButton" onclick="submitBid()">Submit</button>
-                </form>
-                <div style = "padding-bottom:30px">
-                <a style="display:none" id="done"></a>
-                <label> currentBids </label>
-                <table id="bidsTable" border="1"><tr> <td><b>Name</b></td> <td><b> Value</b> </td> </table>
 
-                <p id="error"></p>
-                </tr>
-
+              </form>
+            </div>
         </div>
         </div>
         </div>
@@ -159,7 +142,12 @@
         </div>
 
 </body>
-<body>
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/121761/card.js'></script>
+<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/121761/jquery.card.js'></script>
+
+<script src="../js/payment.js"></script>
 
 <script>
     var name = "{{ user }}";
@@ -192,6 +180,7 @@
     })
 
     var keys=[];
+
 
     var query = firebase.database().ref("projects/" + projKey + '/bids').orderByKey();
     query.once("value")
