--- a/views/test.html
+++ b/views/test.html
@@ -34,32 +34,44 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav search">
 					<li>
-						<form class="search">
+						<form action="/search" method="post" class="search" id="searchForm">
 							<span>
-								<input type="text" class="search rounded" id="searchProject" placeholder="Search">
+								<input type="text" class="search rounded register-input" name="query" id="searchProject" placeholder="Search">
 							</span>
 						</form>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/register" class="scroll">Projects</a></li>
-					<li><a href="/register" class="scroll">Bids</a></li>
-          <li><a href="/register" class="scroll">Profile</a></li>
-					<li><a href="/login" class="scroll">Logout</a></li>
+					<li><a href="/projects" class="scroll">Projects</a></li>
+          <li><a href="/profile" class="scroll">Profile</a></li>
+					<li><a href="/" class="scroll" onclick="logout()">Logout</a></li>
 				</ul>
 			</div>
 		<!-- </div> -->
 	</nav>
-
-
-	<div id="tf-dash">
+	<div id="tf-table">
 		<div class="overlay">
 			<div class="same">
-				<table id="projectsTable" border="1">
+				<label> Hired For</label>
+				<table id="hiredTable" border="1">
+
 				</table>
 			</div>
 		</div>
 	</div>
+
+	<div id="tf-table">
+		<div class="overlay">
+			<div class="same">
+				<label> Your Projects </label>
+
+				<table id="yourTable" border="1">
+
+				</table>
+			</div>
+		</div>
+	</div>
+	<hr>
 
 	<br><br>
 
@@ -122,12 +134,6 @@
 
 				userId = firebase.auth().currentUser.uid;
 				console.log(userId)
-				firebase.database().ref('/users/' + userId).once('value').then(function(snapshot) {
-					var username = snapshot.val()["username"];
-                    // console.log(username)
-                    // console.log(snapshot.val())
-                    document.getElementById("username").innerHTML = snapshot.val()["username"]
-                });
 
 
 				var userKeys = [];
@@ -154,7 +160,7 @@
 							var cell6 = row.insertCell(5);
 							var cell7 = row.insertCell(6);
 							var button = row.insertCell(7);
-
+							console.log(snapshot.val()[userKeys[x]])
 							cell1.innerHTML = snapshot.val()[userKeys[x]]["name"]
 							cell2.innerHTML = snapshot.val()[userKeys[x]]["category"]
 							cell3.innerHTML = snapshot.val()[userKeys[x]]["location"]
@@ -202,41 +208,6 @@
 								cell5.innerHTML = snapshot.val()[tempKey]["highestbid"]
 								cell6.innerHTML = snapshot.val()[tempKey]["description"]
 							}
-						}
-					});
-				});
-
-				var projKeys = [];
-				console.log(userId)
-				var query3 = firebase.database().ref("/users/" + userId + '/myBids').orderByKey();
-				query2.once("value")
-				.then(function(snapshot) {
-					snapshot.forEach(function(childSnapshot) {
-						var key = childSnapshot.key;
-						console.log(key)
-						projKeys.push(key);
-					});
-
-					firebase.database().ref('/users/' + userId + '/myBids').once('value').then(function(snapshot) {
-						for (var x=0; x < snapshot.numChildren(); x++){
-							tempKey = Object.keys(snapshot.val())[x]
-							var table = document.getElementById("pendingTable");
-
-							var row = table.insertRow(0);
-							var cell1 = row.insertCell(0);
-							var cell2 = row.insertCell(1);
-
-							console.log(snapshot.val()[tempKey])
-
-							cell1.innerHTML = snapshot.val()[tempKey]["name"]
-							cell2.innerHTML = snapshot.val()[tempKey]["category"]
-							cell3.innerHTML = snapshot.val()[tempKey]["location"]
-							cell4.innerHTML = snapshot.val()[tempKey]["service"];
-							cell5.innerHTML = snapshot.val()[tempKey]["description"]
-       						cell6.innerHTML = snapshot.val()[tempKey]["bid"]
-        					cell7.innerHTML = snapshot.val()[tempKey]["comments"]
-
-							button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[tempKey]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[tempKey]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[tempKey]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[tempKey]["service"] + '"> <input type="text" style="display:none" name="highestbid" class="register-input" value="'+ snapshot.val()[tempKey]["highestbid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[tempKey]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + tempKey + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + tempKey + '"><input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[tempKey]["creatorId"] + '"> <input type="text" style="display:none" name="deadline" class="register-input" value = "' + snapshot.val()[tempKey]["deadline"] + '"> <button id="details" value="upvote">Details</button></form>';
 						}
 					});
 				});
@@ -307,42 +278,7 @@
 var keys = [];
 
 var query = firebase.database().ref("projects").orderByKey();
-query.once("value")
-.then(function(snapshot) {
-	snapshot.forEach(function(childSnapshot) {
-		var key = childSnapshot.key;
-		console.log(key)
-		keys.push(key);
-	});
 
-	firebase.database().ref('/projects').once('value').then(function(snapshot) {
-		for (var x=0; x < snapshot.numChildren(); x++){
-			// if(snapshot.val()[keys[x]]["open"] == true){
-				var table = document.getElementById("projectsTable");
-
-				var row = table.insertRow(0);
-				var cell1 = row.insertCell(0);
-				var cell2 = row.insertCell(1);
-				var cell3 = row.insertCell(2);
-				var cell4 = row.insertCell(3);
-				var cell5 = row.insertCell(4);
-				var cell6 = row.insertCell(5);
-				var cell7 = row.insertCell(6);
-				var button = row.insertCell(7);
-
-				cell1.innerHTML = snapshot.val()[keys[x]]["name"]
-				cell2.innerHTML = snapshot.val()[keys[x]]["category"]
-				cell3.innerHTML = snapshot.val()[keys[x]]["location"]
-				cell4.innerHTML = snapshot.val()[keys[x]]["service"];
-				cell5.innerHTML = snapshot.val()[keys[x]]["highestbid"]
-				cell6.innerHTML = snapshot.val()[keys[x]]["description"]
-				cell7.innerHTML = snapshot.val()[keys[x]]["deadline"]
-
-				button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[keys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[keys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[keys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[keys[x]]["service"] + '"> <input type="text" style="display:none" name="highestbid" class="register-input" value="'+ snapshot.val()[keys[x]]["highestbid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[keys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"><input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[keys[x]]["creatorId"] + '"> <input type="text" style="display:none" name="deadline" class="register-input" value = "' + snapshot.val()[keys[x]]["deadline"] + '"> <button id="details" value="upvote">Details</button></form>';
-			// }
-		}
-	})
-});
 
         // firebase.database().ref('/users/' + userId).once('value').then(function(snapshot) {
             // var username = snapshot.val()["username"];
@@ -424,5 +360,6 @@ query.once("value")
         		console.log(error);
         	});
         }
+
     </script>
 </html>
