--- a/views/yourProjectDetails.html
+++ b/views/yourProjectDetails.html
@@ -12,6 +12,19 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!-- <script src="../js/jquery.min.js"></script> -->
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+    <!-- Bootstrap -->
+    <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <!-- <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+    <!-- bootstrap-progressbar -->
+    <!-- <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet"> -->
+    <link href="../build/css/custom.min.css" rel="stylesheet">
+
 </head>
 
 <style>
@@ -28,6 +41,94 @@
         width:100%;
     }
 </style>
+
+<body class="nav-md">
+    <div class="container body" style="z-index:1">
+      <div class="main_container" style="z-index:1">
+        <div class="col-md-3 left_col">
+          <div class="left_col scroll-view">
+            <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642;">
+              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
+      <!--         <hr> -->
+
+            </div>
+
+            <div class="clearfix" style="background-color:#142642"><!-- </br> &nbsp; --></div>
+     <!--        <hr> -->
+            <!-- menu profile quick info -->
+<!--             <div class="profile clearfix">
+              <div class="profile_pic">
+
+              </div>
+              <div class="profile_info">
+              </div>
+            </div> -->
+            <!-- /menu profile quick info -->
+
+             <!-- sidebar menu -->
+            <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+              <div class="menu_section" style = "font-size:16px">
+                <ul class="nav side-menu">
+                  <li><a href="/profile">Profile</a></li>
+                  <li><a href="/myprojects">My Projects</a></li>
+                  <li><a href="/pending">Pending Bids</a></li>
+                  <li><a href="/accepted">Accepted Bids</a></li>
+                  <li><a href="/completed">Completed</a></li>
+                  <li><a href="/" style = "">Logout</a></li>
+                </ul>
+              </div>
+
+            </div>
+            <!-- /sidebar menu -->
+
+            <!-- /menu footer buttons -->
+<!--             <div class="hidden-small">
+              </a><div style = "text-align: center; font-size:18px;"><center><a href="/logout">Logout</a></center></div>
+            </div> -->
+            <!-- /menu footer buttons -->
+          </div>
+        </div>
+
+        <!-- top navigation -->
+        <div class="top_nav">
+          <div class="nav_menu" style = "height:57px">
+  <!--           <nav> -->
+                <a id="menu_toggle"><i class="fa fa-bars fa_custom fa-2x" style = "padding:15px"></i></a>
+                <ul class="nav navbar-nav navbar-right">
+                <li class="">
+                  <a href = "/profile" class="user-profile dropdown-toggle" style = "height:57px">
+                   <!--  <img src="images/img.jpg" alt=""> --><label id="username" style = "text-align: center !important; margin-right:20px;"></label>
+                  </a>
+                <br>
+          </div>
+
+        </div>
+
+
+        <div class="right_col" role="main" style="height:100%">
+          <a href="/profile"> <button> back </button> </a>
+            <header>
+                <h1>{{ user }} </h1>
+                <h3 style="color:gray">{{ category }} </h3>
+                <p style="color:gray"> {{ location }} </p>
+                <hr>
+            </header>
+            <h4> {{ service }} </h4>
+            <p>{{ description }}</p>
+            <p> ${{ highestbid }} </p>
+            <p> deadline {{ deadline }}</p>
+
+            <a style="display:none" href="/profile" id="done"></a>
+
+            <label> currentBids </label>
+            <table id="bidsTable" border="1"><tr> <td>name</td> <td> value </td> <td> comments </td> <td> accept offer</td></table>
+
+            <label id="closed"> </label>
+        </div>
+      </div>
+    </div>
+
+</body>
 
 <body style="overflow-x: hidden; overflow-y: hidden;">
     <a href="/profile"> <button> back </button> </a>
@@ -58,7 +159,7 @@
     var service = "{{ service }}";
     var highestbid = "{{ highestbid }}";
     var description = "{{ description }}";
-    
+
     var tempKey = "{{ key }}";
     var projKeyArray = tempKey.split(',');
     var projKey = projKeyArray[0];
@@ -85,7 +186,7 @@
     })
 
     var keys=[];
-    
+
     console.log(creator);
     var query = firebase.database().ref("users/" + creator).orderByKey();
     query.once("value")
@@ -142,13 +243,15 @@
                 cell1.innerHTML = names[x]
                 cell2.innerHTML = bidValues[x]
                 cell3.innerHTML = comments[x]
-
-                cell4.innerHTML = '<button id="accept" onclick="acceptBid(\'' + names[x] + ',' + bidValues[x] + ',' + userIds[x] + '\')" value="upvote">Accept</button></form>';
+                var string = '<form action="https://www.paypal.com/cgi-bin/webscr" onclick="acceptBid(\'' + names[x] + ',' + bidValues[x] + ',' + userIds[x] + '\')" method="post"> <input type="hidden" name="business" value="herschelgomez@xyzzyu.com"><input type="hidden" name="cmd" value="_xclick"><input type="hidden" name="item_name" value="Hot Sauce-12oz. Bottle"><input type="hidden" name="amount" value="5.95"><input type="hidden" name="currency_code" value="USD"><input type="image" name="submit" border="0"src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_buynow_107x26.png"alt="Buy Now"><img alt="" border="0" width="1" height="1"src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif">'
+                cell4.innerHTML = string;
 
             }}, 2000)
     });
 
     function acceptBid(name2){
+
+
         var realData = name2.split(',');
         var userName = realData[0]
         var bidValue = realData[1]
@@ -173,6 +276,7 @@
             highestbid: highestbid,
             creatorId:creator,
             creatorEmail:creatorEmail,
+            deadline:deadline,
             done:false
         };
 
