--- a/views/accepted.html
+++ b/views/accepted.html
@@ -33,9 +33,9 @@
 
 
             <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642;">
-              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
+              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">BIDIT</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
-        
+
             </div>
 
             <div class="clearfix" style="background-color:#142642"><!-- </br> &nbsp; --></div>
@@ -43,7 +43,7 @@
             <!-- menu profile quick info -->
 <!--             <div class="profile clearfix">
               <div class="profile_pic">
-      
+
               </div>
               <div class="profile_info">
               </div>
@@ -103,5 +103,5 @@
     <script src="../build/js/custom.min.js"></script>
 
 </body>
-    
+
 </html>
