--- a/views/completed.html
+++ b/views/completed.html
@@ -50,9 +50,9 @@
 
 
             <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642;">
-              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
+              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">BIDIT</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
-        
+
             </div>
 
             <div class="clearfix" style="background-color:#142642"><!-- </br> &nbsp; --></div>
@@ -368,7 +368,7 @@
             }
           });
         });
-      } 
+      }
       else {
         window.location = document.getElementById("notLoggedIn").href
       }
@@ -432,7 +432,7 @@ query.once("value")
 
           while(table.rows.length > 0) {
             table.deleteRow(0);
-          }   
+          }
 
 
           var query = firebase.database().ref("projects").orderByKey();
