--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yodel</title>
-    <meta name="description" content="Yodel stuff">
+    <title>Bidit</title>
+    <meta name="description" content="Bidit stuff">
     <meta name="keywords" content="Freelance">
 
     <!-- Favicons
@@ -34,7 +34,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<div class="navbar-brand" href="#">Yodel</div>
+				<div class="navbar-brand" href="#">BIDIT</div>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -64,8 +64,8 @@
     <div id="tf-about">
     	<div class="container"> <!-- container -->
     		<div class="section-header">
-    			<h2>Yodel helps <span class="highlight"><strong>you</strong></span></h2>
-    			<h5><em>Whether you need money or a service, Yodel is the way</em></h5>
+    			<h2>Bidit helps <span class="highlight"><strong>you</strong></span></h2>
+    			<h5><em>Whether you need money or a service, Bidit is the way</em></h5>
     		</div><!-- end container -->
     	</div>
     </div>
@@ -125,7 +125,7 @@
                             <i class="fa fa-search"></i>
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Hire someone on Yodel to do it</h4>
+                            <h4 class="media-heading">Hire someone on Bidit to do it</h4>
                             <p>Ultrices lacus proin conubia dictum tempus, tempor pede vitae faucibus, sem auctor, molestie diam dictum aliquam. Dolor leo, ridiculus est ut cubilia nec, fermentum arcu praesent, pede etiam. Tempor vestibulum turpis id ligula mi mattis. Eget arcu vitae mauris amet odio.</p>
                         </div>
                     </div><!-- Process #3 -->
@@ -158,7 +158,7 @@
 
     <div id="tf-footer">
     	<div class="container"><!-- container -->
-    		<p class="pull-left">© 2015 Yodel. All rights reserved.</p> <!-- copyright text here-->
+    		<p class="pull-left">© 2015 Bidit. All rights reserved.</p> <!-- copyright text here-->
     		<ul class="list-inline social pull-right">
     		</ul>
     	</div><!-- end container -->
