--- a/views/login.html
+++ b/views/login.html
@@ -12,7 +12,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
     <link href="../main.css" rel="stylesheet">
-  
+
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 
@@ -28,12 +28,12 @@
     <center>
 <!--         <h1 class="register-title" style = "margin-top: 20px">Login</h1> -->
             <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#307EC8; padding-top:25px; height: 70px;">
-              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important;">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
+              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important;">BIDIT</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
-        
+
             </div>
             <div style = "padding-bottom:40px"></div>
- 
+
 
         <div class="container" style = "">
 
@@ -69,7 +69,7 @@
                         <div class="register-label"> Password </div>
                         <div class="login-box-field">
                         <input type="password" class="register-input" id="password">
-                        
+
                         <p id="error"></p>
                         <button class="btn" type="button" onclick="login()">Login</button>
                         <div style="margin-top:30px">
@@ -98,14 +98,14 @@
         firebase.initializeApp(config);
 
         function login(){
-            firebase.auth().signInWithEmailAndPassword(document.getElementById("email").value, document.getElementById("password").value).then(function(){ 
+            firebase.auth().signInWithEmailAndPassword(document.getElementById("email").value, document.getElementById("password").value).then(function(){
                 var user = firebase.auth().currentUser;
 
                 if (user) {
                     window.location = document.getElementById('link').href;
                 }
             }).catch(function(error) {
-                document.getElementById("error").innerHTML = error.message;           
+                document.getElementById("error").innerHTML = error.message;
             });
         }
     </script>
