--- a/views/pending.html
+++ b/views/pending.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
-  
+
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
@@ -33,9 +33,9 @@
 
 
             <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#142642;">
-              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
+              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important">BIDIT</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
-        
+
             </div>
 
             <div class="clearfix" style="background-color:#142642"><!-- </br> &nbsp; --></div>
@@ -63,7 +63,7 @@
 
             <!-- /menu footer buttons -->
             <!-- /menu footer buttons -->
-            
+
           </div>
         </div>
 
