--- a/views/projects.html
+++ b/views/projects.html
@@ -27,7 +27,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<div class="navbar-brand" href="#">Yodel</div>
+				<div class="navbar-brand" href="#">Bidit</div>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
