--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
     <link href="../main.css" rel="stylesheet">
-  
+
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
@@ -29,12 +29,12 @@
     <center>
 <!--         <h1 class="register-title" style = "margin-top: 20px">Login</h1> -->
             <div class="navbar nav_title" style="border: 0; /*padding-top:20px*/;background-color:#307EC8; padding-top:25px; height: 70px;">
-              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important;">YODEL</span><!-- </i> <span>Gentelella Alela!</span> --></a>
+              <a href="/" ><!-- <i class="fa fa-paw"> --><!-- <img src="img/yodelicon.png" style="width:20%"> --><span style = "padding-left:20px; font-size: 36px;font-family: 'Raleway', sans-serif;color:white !important;">BIDIT</span><!-- </i> <span>Gentelella Alela!</span> --></a>
       <!--         <hr> -->
-        
+
             </div>
             <div style = "padding-bottom: 2px"></div>
- 
+
 
         <div class="container" style = "">
 
@@ -101,7 +101,7 @@
     <script>
         var config = {
             apiKey: "AIzaSyBljIAXQPP9f9FJ9LTHuVlZJZkpajvmZj4",
-            authDomain: "yodelbackend.firebaseapp.com", 
+            authDomain: "yodelbackend.firebaseapp.com",
             databaseURL: "https://yodelbackend.firebaseio.com",
             storageBucket: "yodelbackend.appspot.com",
             messagingSenderId: "609174959546"
@@ -117,7 +117,7 @@
                                         birthday: document.getElementById("birthday").value,
                                         email: document.getElementById("email").value
                                     }).then(function(){
-                                        firebase.auth().signInWithEmailAndPassword(document.getElementById("email").value, document.getElementById("password").value).then(function(){ 
+                                        firebase.auth().signInWithEmailAndPassword(document.getElementById("email").value, document.getElementById("password").value).then(function(){
                                             var user = firebase.auth().currentUser;
                                             if (user) {
                                                 console.log("got here");
